@@ -36,6 +36,8 @@
 	* ipmi-config/: Audit, remove unnecessary memsets, add +1 to
 	string buffers, minor fixes.
 
+	* Properly memset hdr buffers when outputting debug output.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
